--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1662,26 +1662,136 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.99px) {
+
+  /*==================================
+        Scroll up Button
+    ==================================*/
+    .tf__scroll_btn {
+      font-size: 20px;
+      position: fixed;
+      bottom: 30px;
+      right: 912px;
+      z-index: 9999;
+      cursor: pointer;
+      text-align: center;
+      color: var(--colorWhite);
+      text-transform: capitalize;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: var(--colorPrimary);
+      border-radius: 50%;
+      transition: all linear 0.3s;
+      -webkit-transition: all linear 0.3s;
+      -moz-transition: all linear 0.3s;
+      -ms-transition: all linear 0.3s;
+      -o-transition: all linear 0.3s;
+      animation: scroll_amini linear 2s infinite alternate;
+      -webkit-animation: scroll_amini linear 2s infinite alternate;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+    }
+
   /*==================================
         HOME PAGE START
     ==================================*/
 
+  header {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100%;
+  }
+
   .main_menu {
     height: 70px;
+    overflow-x: hidden;
+    max-width: 100%;
   }
 
   .main_menu::after {
     height: 84px;
+    width: 100%;
   }
 
   .main_menu .container-fluid,
   .main_menu .container {
-    padding: 15px 0px;
+    padding: 15px 15px;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  .mobile-menu .container-fluid {
+    padding: 0 15px;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   .navbar-brand {
-    width: 150px;
-    margin-left: 12px;
+    width: 140px;
+    max-width: 140px;
+    margin-left: 0;
+    flex-shrink: 0;
+  }
+
+  .mobile-menu .navbar-brand {
+    width: 140px;
+    max-width: 140px;
+    margin-left: 0;
+  }
+
+  .mobile-menu .text-end {
+    flex-shrink: 0;
+    padding: 0;
+  }
+
+  .menu-bar.navbar-toggler {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    flex-shrink: 0;
+  }
+
+  .circle_btn {
+    display: none !important;
+  }
+
+  .marquee_section {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .tf__scroll_btn {
+    bottom: 20px;
+    right: 15px;
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+    max-width: calc(100vw - 30px);
+    max-height: calc(100vh - 30px);
+  }
+
+  footer::after {
+    position: absolute;
+    content: "";
+    background: url(/_next/static/media/footer_shapes.6e8e26c7.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 220px;
+    height: 247px;
+    bottom: 100px;
+    right: 121px;
+    z-index: 1;
+    animation: rotate_animi linear 4s infinite alternate;
+    -webkit-animation: rotate_animi linear 4s infinite alternate;
   }
 
   .main_menu .navbar-toggler {
@@ -2352,12 +2462,23 @@
         HOME PAGE START
     ==================================*/
 
+  header {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100%;
+  }
+
   .main_menu {
     height: 70px;
+    overflow-x: hidden;
+    max-width: 100%;
+    left: 0;
+    right: 0;
   }
 
   .main_menu::after {
     height: 84px;
+    width: 100%;
   }
 
   .search_icon {
@@ -2366,12 +2487,80 @@
 
   .main_menu .container-fluid,
   .main_menu .container {
-    padding: 15px 0px;
+    padding: 15px 15px;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  .mobile-menu .container-fluid {
+    padding: 0 15px;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   .navbar-brand {
-    width: 150px;
-    margin-left: 12px;
+    width: 120px;
+    max-width: 120px;
+    margin-left: 0;
+    padding: 0;
+    flex-shrink: 0;
+  }
+
+  .mobile-menu .navbar-brand {
+    width: 120px;
+    max-width: 120px;
+    margin-left: 0;
+  }
+
+  .mobile-menu .text-end {
+    flex-shrink: 0;
+    padding: 0;
+  }
+
+  .menu-bar.navbar-toggler {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    flex-shrink: 0;
+  }
+
+  .circle_btn {
+    display: none !important;
+  }
+
+  .marquee_section {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .tf__scroll_btn {
+    bottom: 20px;
+    right: 15px;
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+    max-width: calc(100% - 30px);
+    max-height: calc(100% - 30px);
+  }
+
+  footer::after {
+    position: absolute;
+    content: "";
+    background: url(/_next/static/media/footer_shapes.6e8e26c7.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 220px;
+    height: 247px;
+    bottom: 100px;
+    right: 94px;
+    z-index: 1;
+    animation: rotate_animi linear 4s infinite alternate;
+    -webkit-animation: rotate_animi linear 4s infinite alternate;
   }
 
   .main_menu .navbar-toggler {
