--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,29 @@ body {
   font-family: var(--paraFont);
   color: var(--paraColor);
   width: 100% !important;
+  max-width: 100vw;
+  position: relative;
+}
+
+/* Hide scrollbar for desktop only */
+@media (min-width: 992px) {
+  html {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
+
+  body {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+
+  body::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 }
 
 img {
@@ -688,6 +711,10 @@ html.lenis {
   padding: 0;
   top: 0;
   transition: top 0.8s;
+  left: 0;
+  right: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .main_menu::after {
@@ -1143,8 +1170,8 @@ html.lenis {
   background-size: cover;
   width: 275px;
   height: 300px;
-  top: -115px;
-  right: -145px;
+  top: -150px;
+  right: 31px;
   z-index: -1;
   animation: rotate_animi linear 4s infinite alternate;
   -webkit-animation: rotate_animi linear 4s infinite alternate;
