--- a/public/css/style.css
+++ b/public/css/style.css
@@ -475,7 +475,7 @@ html.lenis {
 .main-menu .navbar-nav>ul>li>a {
   display: inline-block;
   color: var(--colorBlack);
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
   letter-spacing: 0.6px;
   text-transform: uppercase;
@@ -531,7 +531,7 @@ html.lenis {
   padding: 7px 20px;
   transition: all linear 0.3s;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   letter-spacing: 0.4px;
 }
@@ -2717,6 +2717,42 @@ footer::after {
   border-radius: 0;
   border-bottom: 1px solid rgba(130, 131, 140, 0.3);
   padding: 20px;
+  width: 100%;
+  color: var(--paraColor);
+  font-size: 17px;
+  font-family: var(--paraFont);
+  outline: none;
+}
+
+.tf__contact_form_imput select {
+  background: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid rgba(130, 131, 140, 0.3);
+  padding: 20px;
+  width: 100%;
+  color: var(--paraColor);
+  font-size: 17px;
+  font-family: var(--paraFont);
+  outline: none;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%2382838c' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  padding-right: 45px;
+  cursor: pointer;
+}
+
+.tf__contact_form_imput select:focus {
+  border-bottom-color: var(--colorPrimary);
+}
+
+.tf__contact_form_imput select option {
+  background: var(--colorWhite);
+  color: var(--colorBlack);
+  padding: 10px;
 }
 
 .tf__contact_form button {
